10/09/10 (Olaf)
Upgrade to Jena 2.6.3 and ARQ 2.8.5

09/27/10 (Jennifer)
Changed most of the code in QuadDB and DbCompatibility to use PreparedStatements instead of escaped strings.

09/24/10 (Jennifer)
Changed QuadDB to utilize com.sun.rowset.CachedRowSetImpl so that each ResultSet opened can be closed to prevent a memory leak that was occurring.
Created new method, preparedStatementsRequireTablesToExist, in DbCompatibility because more than 1 database falls in this category.
  Modified DbCompatibility.initializePreparedStatements() to check the above method and create tables if needed.
  Modified the subclasses for Derby and HSQLDB to override the new method.
  The latter means we can (and do) move what was thought to be a Derby-specific work-around up a level because it also applies to HSQLDB.  

09/22/10 (Jennifer)
Improved DBConnectionHelper test code - added defaults for all 5 supported databases and simplified database selection.
Added method deleteTables to class DbCompatibility so can call from there and QuadDB, and now do.
In preparation for using PreparedStatements more, modified DerbyCompatibility to work-around some specific issues, i.e., 
  to permit user-created statements by first creating a schema for the username, and
  to permit the creation of prepared statements about tables that may not exist yet otherwise.

09/21/10 (Jennifer)
Moved call to initializePreparedStatements from NamedGraphSetDB to QuadDB.
(Previously there were situations in which this method was never called.)

09/21/10 (Jennifer)
Moved database-specific error handling from DbCompatibility to subclass MySQLCompatibility.

09/16/10 (Jennifer)
Applied patch submitted by Asheesh Laroia, modifying QuadD and DbCompatibility to support SQL PreparedStatement's.

09/14/10 (Jennifer)
Changed the .classpath file to the "regular" type (rather than maven-esque) so it refers only to the libraries included in the project.